--- a/de/metadata.yaml
+++ b/de/metadata.yaml
@@ -1,8 +1,8 @@
 ---
 title: "lernOS Expert Debriefing Leitfaden"
-subtitle: "..."
+subtitle: "Wissen von Expert*innen nachhaltig bewahren"
 author: [Simon Dückert]
-date: "Version 2.4 (19.11.2018)"
+date: "Version 3.0 (dd.mm.2020)"
 titlepage: true
 titlepage-color: "ff6600"
 titlepage-text-color: "ffffff"
