Completed all issues for version 3.0

--- a/de/metadata.yaml
+++ b/de/metadata.yaml
@@ -2,7 +2,7 @@
 title: "lernOS Expert Debriefing Leitfaden"
 subtitle: "Wissen von Expert*innen nachhaltig bewahren"
 author: [Simon Dückert]
-date: "Version 3.0 (dd.mm.2020)"
+date: "Version 3.0 (12.10.2020)"
 titlepage: true
 titlepage-color: "ff6600"
 titlepage-text-color: "ffffff"
