--- a/de/mkdocs.yml
+++ b/de/mkdocs.yml
@@ -7,7 +7,31 @@ site_dir: ../docs/de
 
 nav:
     - Über lernOS: index.md
-    - Grundlagen: 1-0-Grundlagen.md
+    - Grundlagen:
+        - Geschichte des Expert Debriefings: 1-1-Geschichte-des-Expert-Debriefings.md
+        - Warum ist Wissensbewahrung heute wichtig?: 1-2-Warum-ist-Wissensbewahrung-heute-wichtig.md
+        - Implizites und explizites Wissen: 1-3-Implizites-und-explizites-Wissen.md
+        - Erfolgsfaktoren für Expert Debriefing: 1-4-Erfolgsfaktoren-fuer-Expert-Debriefing.md
+        - Expert Debriefing Referenzprozess:
+            - Überblick: 1-5-0-Expert-Debriefing-Referenzprozess.md
+            - Vorgespräch führen: 1-5-1-Vorgespraech-fuehren.md
+            - WIssenslandkarte aufbauen: 1-5-2-Wissenslandkarte-aufbauen.md
+            - Maßnahmen ableiten: 1-5-3-Massnahmen-ableiten.md
+            - Feedback einholen: 1-5-4-Feedback-einholen.md
+            - Maßnahmen begleiten: 1-5-5-Massnahmen-begleiten.md
+            - Reflexion moderieren: 1-5-6-Reflexion-moderieren.md
+        - Expert Debriefing Toolbox:
+            - Überblick: 1-6-0-Expert-Debriefing-Toolbox.md
+            - Checkliste: 1-6-1-Checkliste.md
+            - Dokumentenbibliothek: 1-6-2-Dokumentenbibliothek.md
+            - Lessons Learned: 1-6-3-Lessons-Learned.md
+            - Erklärvideo: 1-6-4-Erklaervideo.md
+            - FAQ: 1-6-5-FAQ.md
+            - Memex: 1-6-6-Memex.md
+            - Podcast: 1-6-7-Podcast.md
+            - Soziales Netzwerk Diagramm: 1-6-8-Soziales-Netzwerk-Diagramm.md
+            - Voice over PowerPoint: 1-6-9-Voice-over-PowerPoint.md
+            - Screencast: 1-6-10-Screencast.md
     - Lernpfad: 2-0-Lernpfad.md
     - Anhang: 3-Anhang.md
 
