Navigation korrigiert, DS_Store ignoriert

--- a/de/mkdocs.yml
+++ b/de/mkdocs.yml
@@ -13,7 +13,7 @@ nav:
         - Expert Debriefing Referenzprozess:
             - Überblick: 1-5-0-Expert-Debriefing-Referenzprozess.md
             - Vorgespräch führen: 1-5-1-Vorgespraech-fuehren.md
-            - WIssenslandkarte aufbauen: 1-5-2-Wissenslandkarte-aufbauen.md
+            - Wissenslandkarte aufbauen: 1-5-2-Wissenslandkarte-aufbauen.md
             - Maßnahmen ableiten: 1-5-3-Massnahmen-ableiten.md
             - Feedback einholen: 1-5-4-Feedback-einholen.md
             - Maßnahmen begleiten: 1-5-5-Massnahmen-begleiten.md
