Kapitel zur Nutzung des Leitfadens mit KI-Chatbots ergänzt

--- a/de/metadata.yaml
+++ b/de/metadata.yaml
@@ -1,8 +1,8 @@
 ---
 title: "lernOS Expert Debriefing Leitfaden"
-subtitle: "Wissen von Expert*innen nachhaltig bewahren"
-author: [Simon Dückert]
-date: "Version 3.0 (12.10.2020)"
+subtitle: "Wissen von Expert:innen nachhaltig bewahren"
+author: [Simon Dückert, Silvia Roderus]
+date: "Version 3.1 (18.11.2025)"
 titlepage: true
 titlepage-color: "ff6600"
 titlepage-text-color: "ffffff"
